--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Validation</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/83bf57ef2c.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
 </head>
+<link rel="stylesheet" href="style.css">
+<script src="https://kit.fontawesome.com/83bf57ef2c.js" crossorigin="anonymous"></script>
+<script src="script.js" defer></script>
 <body>
     <div class="container">
         <div class="header">
@@ -17,18 +17,18 @@
         <form  class="form" id="form">
 
             <!-- Username -->
-            <div class="form-control success">
+            <div class="form-control ">
                 <label >Username</label>
-                <input type="email" placeholder="ashutosh" id="username">
+                <input type="text" placeholder="Ashutosh" id="username">
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
 
             <!-- Email -->
-            <div class="form-control error">
+            <div class="form-control">
                 <label >Email</label>
-                <input type="text" placeholder="a@.com" id="email">
+                <input type="email" placeholder="a@gmail.com" id="email">
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
@@ -36,7 +36,7 @@
 
             <!-- Password -->
             <div class="form-control">
-                <label >Username</label>
+                <label >Password</label>
                 <input type="password" placeholder="Password" id="password">
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
@@ -45,8 +45,8 @@
 
             <!-- Recheck Password -->
             <div class="form-control">
-                <label >Password Check</label>
-                <input type="password" placeholder="Password" id="password2">
+                <label >Password Same</label>
+                <input type="password" placeholder="Password Same" id="password2">
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
